--- a/src/my_robot_gazebo/config/robot_controllers.yaml
+++ b/src/my_robot_gazebo/config/robot_controllers.yaml
@@ -1,8 +1,6 @@
-# Configuration for the ROS2 controllers
 controller_manager:
   ros__parameters:
-    update_rate: 50
-    use_sim_time: true
+    update_rate: 100
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -10,35 +8,20 @@ controller_manager:
     ackermann_steering_controller:
       type: ackermann_steering_controller/AckermannSteeringController
 
-# Parameters for the ackermann_steering_controller
 ackermann_steering_controller:
   ros__parameters:
-    # Set up which joints are controlled
-    rear_wheel_names:
-      - rear_left_wheel_joint
-      - rear_right_wheel_joint
-    front_steering_names:
-      - front_left_steer_joint
-      - front_right_steer_joint
+    # Use the correct parameter names for the controller
+    rear_wheels_names: ["rear_left_wheel_joint", "rear_right_wheel_joint"]
+    front_steering_joints_names: ["front_left_steer_joint", "front_right_steer_joint"]
 
-    # Robot physical parameters
-    wheel_radius: 0.034
-    wheel_track: 0.09
+    # Robot physical parameters from your config
+    wheel_separation: 0.09   # Corresponds to wheel_track
     wheel_base: 0.1425
-    
-    # Steering limits
-    max_steer_angle: 0.785 # 45 degrees in radians
+    wheel_radius: 0.034
 
-    # Velocity and acceleration limits
-    max_linear_velocity: 2.0 # Corresponds to the throttle_scale in your policy node
-    min_linear_velocity: -2.0
-    max_angular_velocity: 5.0
-    min_angular_velocity: -5.0
-    max_linear_acceleration: 10.0
-    max_linear_deceleration: 10.0
-    max_steering_velocity: 10.0
-    
     # Odometry settings
+    open_loop: false
     odom_frame_id: odom
     base_frame_id: base_link
-    publish_odom_tf: true
+    publish_rate: 50.0
+  
